[tool.poetry]
name = "study-bot"
version = "0.1.0"
description = ""
authors = ["artem <artemilienkono@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
aiogram = "^2.21"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pymongo = {extras = ["srv"], version = "^4.2.0"}
pydantic = "^1.9.2"
transliterate = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
