[tool.poetry]
name = "study-fullapp-bot"
version = "0.1.0"
description = ""
authors = ["WebShining <artemilienkono@gmail.com>"]
readme = "README.md"
packages = [{include = "study_fullapp_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
pydantic = "^1.10.2"
environs = "^9.5.0"
uvicorn = "^0.18.3"
pymongo = "^4.2.0"
aiogram = "^2.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
